// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapshotInteractiveMode skip 1 test, then quit 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then quit 2`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>1 snapshot reviewed<bold></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>r<dim> to restart Interactive Snapshot Mode.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 2`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>1 snapshot reviewed<bold></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>r<dim> to restart Interactive Snapshot Mode.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 3`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>2 snapshots remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 2`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 3`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>2 snapshots reviewed<bold></>, <bold><green>1 snapshot updated</></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>r<dim> to restart Interactive Snapshot Mode.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 4`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>2 snapshots remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 2`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 3`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>2 snapshots reviewed<bold></>, <bold><yellow>2 snapshots skipped</></>

<bold>Watch Usage</>
<dim> › Press </>r<dim> to restart Interactive Snapshot Mode.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 4`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>2 snapshots remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>2 snapshots remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 2`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>, <bold><green>1 snapshot updated</></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 3`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>2 snapshots reviewed<bold></>, <bold><green>1 snapshot updated</></>, <bold><yellow>1 snapshot skipped</></>

<bold>Watch Usage</>
<dim> › Press </>r<dim> to restart Interactive Snapshot Mode.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 4`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 2`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>1 snapshot reviewed<bold></>, <bold><green>1 snapshot updated</></>

<bold>Watch Usage</>
<dim> › Press </>Enter<dim> to return to watch mode.</>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 1`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>2 snapshots remaining<bold></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 2`] = `
"[MOCK - cursorUp]
[MOCK - eraseDown]

<bold>Interactive Snapshot Progress</>
 › <bold><dim>1 snapshot remaining<bold></>, <bold><green>1 snapshot updated</></>

<bold>Watch Usage</>
<dim> › Press </>u<dim> to update failing snapshots for this test.</>
<dim> › Press </>s<dim> to skip the current test.</>
<dim> › Press </>q<dim> to quit Interactive Snapshot Mode.</>
<dim> › Press </>Enter<dim> to trigger a test run.</>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 3`] = `
"[MOCK - eraseDown]

<bold>Interactive Snapshot Result</>
 › <bold><dim>2 snapshots reviewed<bold></>, <bold><green>2 snapshots updated</></>

<bold>Watch Usage</>
<dim> › Press </>Enter<dim> to return to watch mode.</>
"
`;
